# MicroTorrent

./: .clangd  .gitignore  CMakeLists.txt  compile_commands.json  vcpkg.json
cli/: CMakeLists.txt
cli/src/: main.cpp
engine/: CMakeLists.txt
engine/include/: file_manager.hpp  logger.hpp  peer.hpp  swarm.hpp  torrent.hpp  tracker.hpp
engine/src/: bencode.cpp  file_manager.cpp  peer.cpp  swarm.cpp  torrent.cpp  tracker.cpp
include/: bencode.hpp  file_manager.hpp  logger.hpp  peer.hpp  swarm.hpp  torrent.hpp  tracker.hpp  utils.hpp
src/: bencode.cpp  file_manager.cpp  main.cpp  peer.cpp  swarm.cpp  torrent.cpp  tracker.cpp
ui/: CMakeLists.txt
ui/include/: app.hpp  dashboard.hpp
ui/include/screens/: dash_screen.hpp  title_screen.hpp
ui/src/: app.cpp  dashboard.cpp  main.cpp
ui/src/screens/: dash_screen.cpp  title_screen.cpp
